--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+[data-theme='dark'] {
+  --background: #111827;
+  --foreground: #c9c9c9;
+}
+[data-theme='light'] {
+  --background: #c9c9c9;
+  --foreground: #111827;
+}
